--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1>I have livid in </h1>
         <ul>
-            <li>Osceola</li>
-            <li>Wichita</li>
-            <li>Colorado Spring</li>
-            <li>Lompoc</li>
+            <li>Osceola &pound;</li>
+            <li>Wichita &pound;</li>
+            <li>Colorado Spring &pound;</li>
+            <li>Lompoc &pound;</li>
         </ul>
     <p><span>Osceola is my hometown, I move in with my brother in Wichita.
            I livid in Colorado Spring after get out of the Army. 
@@ -20,9 +20,9 @@
     
     <h1>I want to Visit</h1>
         <ol>
-            <li><strong>Seattle</strong></li>
-            <li><em>New York</em></li>
-            <li><strong>Charleston</strong></li>
+            <li><strong>Seattle &asymp;</strong></li>
+            <li><em>New York &asymp;</em></li>
+            <li><strong>Charleston &asymp;</strong></li>
         </ol>
     <p><span>never been to the Seattle area.I want to see Time square.
                 I just want to visit Charleston.</span></p>
