--- a/cites.html
+++ b/cites.html
@@ -29,6 +29,6 @@
 
 </body>
 <img class="fit-picture"
-     src="/media/cc0-images/grapefruit-slice-332-332.jpg"
-     alt="Grapefruit slice atop a pile of other slices">
+     src="http://i.giphy.com/fVMFiUwkZgpfG.gif"
+     alt="Kitten Stack image">
 </html>
