--- a/favorites.html
+++ b/favorites.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet" />
     <title>Document</title>
 </head>
 <body>
-    
+    <table>
+        <thead>
+            <tr>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+                <th scope="col">Favorite Animal</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+              <td scope="col">Moses</td>
+              <td scope="col">Jackson</td>
+              <td scope="col">Dog</td>
+            </tr>
+        </tbody>
+    </table>   
 </body>
 </html>
