--- a/favorites.html
+++ b/favorites.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" >
     <title>Document</title>
 </head>
 <body>
@@ -18,9 +18,9 @@
         </thead>
         <tbody>
             <tr>
-              <td scope="col">Moses</td>
-              <td scope="col">Jackson</td>
-              <td scope="col">Dog</td>
+              <td> Moses</td>
+              <td> Jackson</td>
+              <td> Dog</td>
             </tr>
         </tbody>
     </table>   
